Added Schema to the GET ALL contact route to meet Rubric API DOCUMENTATION MASTERY requirement.
